examples/test/testpolicy7346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7346
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key9: value1
      key10: value37
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value22
          key46: value27
          key23: value26
      podSelector:
        matchLabels:
          key33: value39
